tests/dev_and_build/errors/html_syntax_error/html_syntax_error_dev.test_manual.mjs
import { startDevServer } from "@jsenv/core";

await startDevServer({
  sourceDirectoryUrl: import.meta.resolve("./client/"),
  clientAutoreload: {
    clientServerEventsConfig: {
      logs: false,
    },
  }
});
